prevent text to overflow on buttons/links

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -95,10 +95,13 @@
     }
     .overview {
         position: relative
+        height: 176px
+        overflow: hidden
+        text-overflow: ellipsis
         float: none
         color: #FFF
         top: 25px
-        width: 95%
+        padding-right: 5%
         font-family: MainFont
         font-smoothing: antialiased
         font-size: 13px
