--- a/src/app/styl/views/show_detail.styl
+++ b/src/app/styl/views/show_detail.styl
@@ -357,6 +357,9 @@
 		font-size 12px
 		color ShowTextColor2
 		margin-bottom 5px
+		white-space nowrap
+		text-overflow ellipsis
+		overflow hidden
 
 	.episode-info-description
 		font-size 13px
